# linked-data-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: generate.rs  lib.rs
derive/src/generate/: de.rs
derive/src/generate/de/: enum.rs  struct.rs
derive/src/generate/ser/: enum.rs  struct.rs
examples/: graph.rs
linked-data/: Cargo.toml  README.md
linked-data-derive/: Cargo.toml  README.md
linked-data-derive/src/: generate.rs  lib.rs  utils.rs
linked-data-derive/src/generate/: de.rs  enum.rs  ser.rs  struct.rs
linked-data-derive/src/generate/de/: enum.rs  struct.rs
linked-data-derive/src/generate/ser/: enum.rs  struct.rs
linked-data/examples/: derive.rs  derive_enum.rs  generics.rs  graph.rs
linked-data/src/: anonymous.rs  datatypes.rs  graph.rs  impl.rs  interpret.rs  lib.rs  macros.rs  predicate.rs  quads.rs  rdf.rs  reference.rs  resource.rs  subject.rs
linked-data/src/datatypes/: de.rs  ser.rs
linked-data/src/impl/: grdf.rs
linked-data/src/impl/grdf/: graph_view.rs  view.rs
serde-ld/: Cargo.toml  README.md
serde-ld-derive/: Cargo.toml  README.md
serde-ld-derive/src/: generate.rs  lib.rs
serde-ld-derive/src/generate/: ser.rs
serde-ld-derive/src/generate/ser/: enum.rs  struct.rs
serde-ld/examples/: derive.rs  derive_enum.rs
serde-ld/src/: datatypes.rs  lib.rs  quads.rs  ser.rs
serde-ld/src/ser/: graph.rs  id.rs  predicate.rs  subject.rs
src/: anonymous.rs  graph.rs  lib.rs  macros.rs  predicate.rs  quads.rs  rdf.rs  resource.rs  subject.rs
src/datatypes/: de.rs  ser.rs
src/impl/: mod.rs
src/impl/rdf_types/: dataset_graph_view.rs  dataset_view.rs  mod.rs
