[package]
name = "linked-data"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive", "serde"]
derive = ["linked-data-derive"]

[dependencies]
rdf-types = "0.16.1"
# xsd-types = "0.7.6"
xsd-types = { git = "https://github.com/timothee-haudebourg/xsd-types.git" }
grdf = { git = "https://github.com/timothee-haudebourg/grdf.git" }
static-iref = "3.0"
json-syntax = "0.9.5"
iref.workspace = true
linked-data-derive = { workspace = true, optional = true }
thiserror.workspace = true
educe = "0.4.22"
serde = { version = "1.0", features = ["derive"], optional = true }

[[example]]
name = "derive"
required-features = ["derive"]