[package]
name = "linked-data"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive", "serde"]
derive = ["linked-data-derive"]

[dependencies]
rdf-types = "0.18.1"
# xsd-types = "0.7.6"
xsd-types = { git = "https://github.com/timothee-haudebourg/xsd-types.git" }
grdf = "0.22"
static-iref = "3.0"
json-syntax = { version = "0.12", features = ["canonicalize"] }
iref.workspace = true
linked-data-derive = { workspace = true, optional = true }
thiserror.workspace = true
educe = "0.4.22"
serde = { version = "1.0", features = ["derive"], optional = true }
im = "15.1.0"

[dev-dependencies]
json-syntax = { version = "0.11.1", features = ["serde"] }

[[example]]
name = "derive"
required-features = ["derive"]