[package]
name = "serde-ld"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["serde-ld-derive"]

[dependencies]
iref.workspace = true
rdf-types = { git = "https://github.com/timothee-haudebourg/rdf-types.git" }
serde-ld-derive = { workspace = true, optional = true }
thiserror.workspace = true

[[example]]
name = "derive"
required-features = ["derive"]