[package]
name = "serde-ld"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["serde-ld-derive"]

[dependencies]
rdf-types = "0.16"
# xsd-types = "0.7.6"
xsd-types = { path = "/home/work/Documents/Community/rdf/xsd-types" }
static-iref = "3.0"
json-syntax = "0.9.5"
iref.workspace = true
serde-ld-derive = { workspace = true, optional = true }
thiserror.workspace = true

[[example]]
name = "derive"
required-features = ["derive"]